<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ayuda">"Recovery Executer, lets you flash a zip,tar,tar.md5,img,bin on recovery selecting it on the file browser!
Click on menu button and select the option you desire.
On menu option \"Configuration\" you can select the default path for the file browser.
Select if you want to do any Wipe before flashing something.
For flash a kernel,modem or any other zip file simply select it from the file browser, there appear only compatible files."</string>
    <string name="ayudaLista">"Select from the dropdown the option you want to add to the list of actions, after selecting the action click \"Add to List\" if the option is selected \"Flashing file\" will show the file browser to select the file to flash
After selecting the file you need to press the button \"Add to List\".
Clicking on any item that item will be removed from the list of actions.After the list click the button \"Save List\"."</string>
    <string name="app_name">RecoveryExecuter </string>
    <string name="configurl">Default Path</string>
    <string name="wipedata">Wipe Data</string>
    <string name="wipecache">Wipe Cache</string>
    <string name="wipedalvik">Wipe Dalvik</string>
    <string name="wipebattery">Wipe Battery</string>
    <string name="btnFlash">Flash file</string>
    <string name="btnCrearLista">Create action list</string>
    <string name="btnAnyadirLista">Add to list</string>
    <string name="btnGuardar">Save</string>
    <string name="btnAyuda">Help</string>
    <string name="btnInstallApk">Install Apk</string>
    <string name="btnNandroid">Backup/Restore</string>
    <string name="salir">Exit</string>
    <string name="version">RecoveryExecuter  1.4.7</string>
    <string name="btnGuardarLista">Save List</string>
    <string name="rutaguardada">Path saved</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="config">Configuration</string>
    <string name="aflashear">Flash :</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="selecarchivo">Select File</string>
    <string name="accionesflashear">Action list flash</string>
    <string name="salirlista">Save the Action List?</string>
    <string name="autor">Author: </string>
    <string name="nomautor">Fraggel</string>
    <string name="contacto">Email: </string>
    <string name="email">androidterminales@gmail.com</string>
    <string name="enviaEmail">Send Email</string>
    <string name="noEmailCliente">There are no email clients installed.</string>
    <string name="envioErrores">Send Error Log</string>
    <string name="noerrorlog">Error log didn\'t exist</string>
    <string name="txtinstalar">Install APK</string>
    <string name="rdbtxtinstalar">Mode APK</string>
    <string name="rdbTxtNormal">Normal</string>
    <string name="rdbTxtSistema">System</string>
    <string name="msgNoRoot">You aren´t root, for use this application you need root first</string>
    <string name="msgNoBusybox">Busybox is necessary but isn\'t installed, install busybox?</string>
    <string name="msgApkInstalada">Application installed</string>
    <string name="txtDonacion">Contribute if you want</string>
    <string name="btnTxtDonacion">Donate</string>
    <string name="msgFileErroneo">The specified file is not valid</string>
	<string name="txtbckname">Write backup name</string>
	<string name="btnmakebackuprestore">Execute</string>
	<string name="rdbbackup">Backup</string>
	<string name="rdbrestore">Restore</string>
	<string name="rdbtxtbck">Select</string>
	<string name="msgNoExisteBackup">Backup not exist</string>
	<string name="msgExisteBackup">A previous Backup exists, Do you want to delete it?</string>
	<string name="btnSoloWipe">Wipe Only</string>
	<string name="msgSoloWipe">Only execute Wipes?</string>
	<string name="txtCreditos">Thanks to el_liberator from Criskelo Team for English and French translation and thanks to bassie1995 for Dutch</string>
	<string name="msgNoSdcard">No SDcard Found and is necessary</string>
	<string name="msgNoFull">This functionality is only on Full version, Do you Want to connect to Play Store and buy it?</string>
	<string name="msgNoFullLista">More than 3 elements is only available on Full version, Do you Want to connect to Play Store and buy it?</string>
	<!-- Sin traducir -->
	<string name="msgEjecucionTerminada">Execution success</string>
	<!-- Sin traducir -->
    <string-array name="arrayAcciones">
        <item>Select action</item>
        <item>Wipe Data</item>
        <item>Wipe Cache</item>
        <item>Wipe Dalvik</item>
        <item>Wipe Battery</item>
        <item>Flash File</item>
        <item>Backup</item>
        <item>Restore</item>
    </string-array>
    <string-array name="arrayAccionesValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

</resources>
