<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
	<CheckBox android:id="@+id/wipedata" android:text="@string/wipedata" android:layout_width="fill_parent"
        android:layout_height="wrap_content"></CheckBox>
	<CheckBox android:id="@+id/wipecache" android:text="@string/wipecache" android:layout_width="fill_parent"
        android:layout_height="wrap_content"></CheckBox>
	<CheckBox android:id="@+id/wipedalvik" android:text="@string/wipedalvik" android:layout_width="fill_parent"
        android:layout_height="wrap_content"></CheckBox>
	<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/btnFlash" android:onClick="Flash"/>
	
	</LinearLayout>
